# kordor-assist

./: .gitignore  README.md  STAGES.md  commands.md  notes  pyproject.toml
scripts/: dev.py  show_checkpoint_columns.py  view_checkpoints.py
src/app/: __init__.py  app.py  exceptions.py  main.py
src/app/ai/: __init__.py
src/app/ai/agents/: __init__.py  onboarding_agent.py
src/app/ai/graphs/: __init__.py  analytics_graph.py  home_graph.py  social_graph.py
src/app/ai/nodes/: __init__.py  company_node.py  onboarding_node.py  product_node.py
src/app/ai/tools/: __init__.py  company_tools.py  onboarding_tools.py  product_tools.py
src/app/api/: chat.py
src/app/config/: __init__.py  settings.py
src/app/core/: __init__.py  deps.py  runtime.py  thread_manager.py  thread_manager_backup.py
src/app/graphs/: __init__.py  analytics_graph.py  home_graph.py  social_graph.py  state.py
src/app/graphs/nodes/: home_nodes.py
src/app/middleware/: __init__.py  error_handler.py  exceptions.py  logging.py
src/app/models/: __init__.py  enums.py  stages_router.py  thread_meta.py
src/app/routes/: __init__.py  chat_route.py  health.py  session_route.py
src/app/schemas/: __init__.py  chat.py  enums.py  thread_schema.py
src/app/services/: __init__.py  chat_service.py  session_service.py
src/app/types/: __init__.py  graph_state.py
src/app/utils/: __init__.py  hash_utils.py  logger.py  thread_storage.py
tests/: learn.py  logger  test_health.py
