[tool.poetry]
name = "kordor-assist"
version = "0.1.0"
description = ""
authors = ["Sanju Peramuna <sanju.peramuna@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic-settings = "^2.10.1"
langgraph = ">=0.2.40"
langchain-core = ">=0.2.34"
typing-extensions = "^4.14.1"
langgraph-checkpoint-sqlite = "^2.0.11"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
start = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
